import LocalizedStrings from 'react-native-localization';


export const strings = new LocalizedStrings({
en: {
  welcomeTitle: 'For a fit and relaxed pregnancy',
  getStarted: 'Get Started',
  orLogin: 'Or Login',
  welcomeback: 'Welcome back!',
  enterpassword: 'Enter a password',
  forgotPassword: 'Have you forgotten your password?',
  logIn: 'Log in',
  titleAccountDetails: 'Add your details below to set up an account',
  createAccount: 'Create account',
  continue: 'Continue',
  activityWorkoutTitle: 'How many times a week you can be active?',
  readPolicyText: "I've read the privacy policy",
  acceptTermsText: "I accept the terms & conditions and  advice",
  welcomeText:
    "It's great you're here! First things first,what should we call you?",
  yourName: 'Your name',
  dateScreenTitle: 'When is your baby due, ',
  skip: 'Skip',
  allowNotifications: 'Allow notifications',
  successTitle: 'Get notifications to boost your motivation',
  weekActive: 'times a week',
  onceWeek: 'Once a week'
  
}, 
de: {
 welcomeTitle: 'Für eine fitte und entspannte Schwangerschaft',
  getStarted: 'Loslegen',
  orLogin: 'Oder einloggen',
  welcomeback: 'Willkommen zurück!',
  enterpassword: 'Geben Sie ein Passwort ein',
  forgotPassword: 'Hast du dein Passwort vergessen?',
  logIn: 'Einloggen',
  titleAccountDetails: 'Fügen Sie unten Ihre Daten hinzu, um ein Konto einzurichten',
  createAccount: 'Benutzerkonto erstellen',
  continue: 'Weitermachen',
  activityWorkoutTitle: 'Wie oft in der Woche können Sie aktiv sein?',
  readPolicyText: "Ich habe die Datenschutzerklärung gelesen",
  acceptTermsText: "Ich akzeptiere die Allgemeinen Geschäftsbedingungen und den Rat von ",
  welcomeText: "Schön, dass Sie hier sind! Das Wichtigste zuerst, wie sollen wir dich nennen?",
  yourName: 'Dein Name',
  dateScreenTitle: 'Wann kommt Ihr Baby, ',
  skip: 'Überspringen',
  allowNotifications: 'Benachrichtigungen zulassen',
  successTitle: 'Erhalten Sie Benachrichtigungen, um Ihre Motivation zu steigern',
  weekActive: 'pro Woche',
  onceWeek: 'Wöchentlich'

}
})