...
    navigation.navigate('WorkoutScreen');
  };

  let maxDate = new Date(moment().add(9, 'months').toDate());

  return (
    <ScrollView testID="dateScreen" style={{backgroundColor: WHITE, flex: 1}}>
      <ImageBackground
        resizeMode="cover"
        style={styles.image}
        source={img.dueDate}>
        <Header navigation={navigation} />
      </ImageBackground>
...
      <View style={styles.loginContainer}>
        <_Text style={styles.welcomeTxt}>
          {strings.dateScreenTitle}
          {name}?
        </_Text>
        <DateComponent
          testID="datePickerBtn"
          datePicked={datePicked}
          date={datePicked ? date : placeholder}
          onPress={() => setOpen(true)}
        />
        <DatePicker
          mode="date"
...
